Try to migrate PatchRequestContractResolver to System.Text.JSON #50 (#52)
* Try to migrate PatchRequestContractResolver to System.Text.JSON #50

* migrating to System.Text.Json

* regenerate apiclient

* remove NewtonsoftJson from most of places

* stubbing hangfire in tests

* merge

* vscode settings

* regenerate

* Remove DateOnly/TimeOnly converters (use .NET 7 build in)
Refactor HangfireStubTests
Fix PatchRequerst in .NET 7

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,5 +13,12 @@
   "git.pullTags": false,
   "git.rebaseWhenSync": true,
   "npm-scripts.showStartNotification": false,
-  "dotnet-test-explorer.testProjectPath": "webapi/tests/**"
+  "dotnet-test-explorer.testProjectPath": "webapi/tests/**",
+  "git.autoStash": true,
+  "git.branchPrefix": "feature/",
+  "git.fetchOnPull": true,
+  "git.showActionButton": {
+    "sync": false
+  },
+  "git.showPushSuccessNotification": true
 }
