--- a/webapi/src/MccSoft.TemplateApp.Domain/MccSoft.TemplateApp.Domain.csproj
+++ b/webapi/src/MccSoft.TemplateApp.Domain/MccSoft.TemplateApp.Domain.csproj
@@ -18,8 +18,9 @@
 
   <ItemGroup>
     <PackageReference Include="JsonKnownTypes" Version="0.5.5" />
-    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="6.0.8" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.8" />
+    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="7.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Npgsql.Json.NET" Version="6.0.6" />
   </ItemGroup>
 
