--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,18 +1,18 @@
+changesetBaseRefs:
+  - master
+  - origin/master
+  - upstream/master
+  - main
+  - origin/main
+  - upstream/main
+  - develop
+  - origin/develop
+  - upstream/develop
+
 nodeLinker: node-modules
 
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-version.cjs
-    spec: '@yarnpkg/plugin-version'
+    spec: "@yarnpkg/plugin-version"
 
-yarnPath: .yarn/releases/yarn-3.2.1.cjs
-
-changesetBaseRefs:
-  - 'master'
-  - 'origin/master'
-  - 'upstream/master'
-  - 'main'
-  - 'origin/main'
-  - 'upstream/main'
-  - 'develop'
-  - 'origin/develop'
-  - 'upstream/develop'
+yarnPath: .yarn/releases/yarn-3.3.0.cjs
