--- a/.ci/azure-pipelines.yml
+++ b/.ci/azure-pipelines.yml
@@ -21,14 +21,17 @@ stages:
           vmImage: 'ubuntu-latest'
 
         steps:
+          - checkout: self
+            fetchDepth: 0
+            submodules: true
+
+          - template: ./azure-pipelines-tests-shared.yml
+
           - script: |
               yarn version $(BUILD_NUMBER)
               cd frontend
               yarn version $(BUILD_NUMBER)
             displayName: 'set version'
-
-          - template: ./azure-pipelines-tests-shared.yml
-
 
           - script: |
               yarn build-dotnet
