fix `set version` step in Azure CI (#57)
* fix CI

* update yarn

* do not use shallow fetch

* update packages

--- a/.ci/azure-pipelines.yml
+++ b/.ci/azure-pipelines.yml
@@ -21,6 +21,10 @@ stages:
           vmImage: 'ubuntu-latest'
 
         steps:
+          - checkout: self
+            fetchDepth: 0
+            submodules: true
+
           - template: ./azure-pipelines-tests-shared.yml
 
           - script: |
