--- a/.ci/azure-pipelines.yml
+++ b/.ci/azure-pipelines.yml
@@ -22,12 +22,13 @@ stages:
 
         steps:
           - checkout: self
-            fetchDepth: 0
+            fetchDepth: 1 # we can't limit fetch depth, see https://yarnpkg.com/features/release-workflow#commit-history
             submodules: true
 
           - template: ./azure-pipelines-tests-shared.yml
 
           - script: |
+              git init
               yarn version $(BUILD_NUMBER)
               cd frontend
               yarn version $(BUILD_NUMBER)
