--- a/.ci/azure-pipelines.yml
+++ b/.ci/azure-pipelines.yml
@@ -22,15 +22,21 @@ stages:
 
         steps:
           - checkout: self
-            fetchDepth: 0
+            fetchDepth: 1
             submodules: true
 
           - template: ./azure-pipelines-tests-shared.yml
 
           - script: |
+              # this is for `yarn version` to work correctly
+              # it doesn't play well with git shallow clone by default
+              # for deails see https://yarnpkg.com/features/release-workflow#commit-history
+              git init
+              git checkout -b main
               yarn version $(BUILD_NUMBER)
-              cd frontend
-              yarn version $(BUILD_NUMBER)
+
+              # `set version` step should go after `yarn install`, 
+              # otherwise `yarn version` install packages by itself without use of cache
             displayName: 'set version'
 
           - script: |
