adjust set version

--- a/.ci/azure-pipelines.yml
+++ b/.ci/azure-pipelines.yml
@@ -33,9 +33,9 @@ stages:
               # for deails see https://yarnpkg.com/features/release-workflow#commit-history
               git init
               git checkout -b main
-              yarn version $(BUILD_NUMBER)
+              yarn workspaces foreach yarn version $(BUILD_NUMBER)
 
-              # `set version` step should go after `yarn install`, 
+              # `set version` step should go after `yarn install`,
               # otherwise `yarn version` install packages by itself without use of cache
             displayName: 'set version'
 
