--- a/.ci/azure-pipelines.yml
+++ b/.ci/azure-pipelines.yml
@@ -28,15 +28,11 @@ stages:
           - template: ./azure-pipelines-tests-shared.yml
 
           - script: |
-              # this is for `yarn version` to work correctly
-              # it doesn't play well with git shallow clone by default
-              # for deails see https://yarnpkg.com/features/release-workflow#commit-history
-              git init
-              git checkout -b main
-              yarn workspaces foreach version $(BUILD_NUMBER)
+              yarn json -f .\package.json -I -e 'this.version=\"$(BUILD_NUMBER)\"'
+              yarn json -f .\frontend\package.json -I -e 'this.version=\"$(BUILD_NUMBER)\"'
 
-              # `set version` step should go after `yarn install`,
-              # otherwise `yarn version` install packages by itself without use of cache
+              # `set version` step should go after `yarn install`, since it uses `json` package which should be installed
+              # we do not use `yarn version` plugin, because it doesn't play well with shallow clone (https://yarnpkg.com/features/release-workflow#commit-history)
             displayName: 'set version'
 
           - script: |
