--- a/.ci/azure-pipelines.yml
+++ b/.ci/azure-pipelines.yml
@@ -28,8 +28,8 @@ stages:
           - template: ./azure-pipelines-tests-shared.yml
 
           - script: |
-              yarn json -f .\package.json -I -e 'this.version=\"$(BUILD_NUMBER)\"'
-              yarn json -f .\frontend\package.json -I -e 'this.version=\"$(BUILD_NUMBER)\"'
+              yarn json -f .\package.json -I -e 'this.version="$(BUILD_NUMBER)"'
+              yarn json -f .\frontend\package.json -I -e 'this.version="$(BUILD_NUMBER)"'
 
               # `set version` step should go after `yarn install`, since it uses `json` package which should be installed
               # we do not use `yarn version` plugin, because it doesn't play well with shallow clone (https://yarnpkg.com/features/release-workflow#commit-history)
