CI: adjust test pattern

--- a/.ci/azure-pipelines-tests-shared.yml
+++ b/.ci/azure-pipelines-tests-shared.yml
@@ -21,7 +21,7 @@ steps:
     inputs:
       command: 'test'
       arguments:
-      projects: 'webapi/**/*Tests.csproj'
+      projects: webapi/**/*.csproj
       publishTestResults: true
     env:
       DOTNET_HOSTBUILDER__RELOADCONFIGONCHANGE: false
