--- a/webapi/Lib/Logging/MccSoft.Logging/MccSoft.Logging.csproj
+++ b/webapi/Lib/Logging/MccSoft.Logging/MccSoft.Logging.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="Destructurama.JsonNet" Version="2.0.0" />
     <PackageReference Include="IdentityModel" Version="6.0.0" />
+    <PackageReference Include="Metalama.Framework" Version="0.5.63-preview" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
     <PackageReference Include="Sentry.Serilog" Version="3.23.1" />
     <PackageReference Include="Serilog.AspNetCore" Version="6.0.1" />
