enable sync button back

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,7 +21,7 @@
   "git.branchPrefix": "feature/",
   "git.fetchOnPull": true,
   "git.showActionButton": {
-    "sync": false
+//    "sync": false
   },
   "git.showPushSuccessNotification": true,
   "csharp.format.enable": true
