Fix db concurrent access issue
* Add postgres error codes for retrying
* Fix concurrent access to DbContext
in domain events handling
* Mute some error logs from EF Core
because they add noise when transaction
is retried

--- a/webapi/src/MccSoft.TemplateApp.App/appsettings.json
+++ b/webapi/src/MccSoft.TemplateApp.App/appsettings.json
@@ -14,6 +14,8 @@
         "Microsoft.AspNetCore.StaticFiles.StaticFileMiddleware": "Error",
         "Microsoft.AspNetCore.Cors": "Error",
         "Microsoft.EntityFrameworkCore": "Information",
+        "Microsoft.EntityFrameworkCore.Database.Command": "Fatal",
+        "Microsoft.EntityFrameworkCore.Update": "Fatal",
         "Microsoft.AspNetCore": "Warning"
       }
     }
