CI: copy translations to backend

--- a/.ci/azure-pipelines.yml
+++ b/.ci/azure-pipelines.yml
@@ -36,6 +36,10 @@ stages:
             displayName: 'set version'
 
           - script: |
+              yarn copy-translations-to-backend
+            displayName: 'copy translations to backend'
+
+          - script: |
               yarn build-dotnet
             displayName: 'build backend'
 
