Log to Elastic (OpenSearch)

--- a/webapi/src/MccSoft.TemplateApp.App/appsettings.json
+++ b/webapi/src/MccSoft.TemplateApp.App/appsettings.json
@@ -1,10 +1,18 @@
 ﻿{
   "Serilog": {
-    "Remote": {
+    "Loggly": {
       "Server": "logs-01.loggly.com",
       "Port": 443,
       "Token": "b2a89f6a-666d-4825-977c-79499bc958c5",
       "InstanceName": "server1"
+    },
+    "EnableConsoleOutput": false,
+    "EnableFileOutput": false,
+    "Elastic": {
+      "Url": "https://logs.mcc-soft.de:9200",
+      "User": "backend-frontend-server",
+      "Password": "!Lt7wA6^*Pcz",
+      "EnableFileBuffer": false
     },
     "MinimumLevel": {
       "Default": "Information",
