Add docs for logging/opensearch

--- a/webapi/src/MccSoft.TemplateApp.App/appsettings.json
+++ b/webapi/src/MccSoft.TemplateApp.App/appsettings.json
@@ -11,7 +11,7 @@
     "Elastic": {
       "Url": "https://logs.mcc-soft.de:9200",
       "User": "backend-frontend-server",
-      "Password": "!Lt7wA6^*Pcz",
+      "Password": "",
       "EnableFileBuffer": false
     },
     "MinimumLevel": {
