--- a/webapi/src/MccSoft.TemplateApp.App/appsettings.json
+++ b/webapi/src/MccSoft.TemplateApp.App/appsettings.json
@@ -1,10 +1,10 @@
 ﻿{
   "Serilog": {
     "Loggly": {
-      "Server": "",
+      "Server": "logs-01.loggly.com",
       "Port": 443,
-      "Token": "",
-      "InstanceName": ""
+      "Token": "b2a89f6a-666d-4825-977c-79499bc958c5",
+      "InstanceName": "server1"
     },
     "EnableConsoleOutput": false,
     "EnableFileOutput": false,
