--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -40,6 +40,9 @@ services:
       - Serilog__Remote__Port=${Serilog__Remote__Port}
       - Serilog__Remote__Token=${Serilog__Remote__Token}
       - Serilog__Remote__InstanceName=${Serilog__Remote__InstanceName}
+      - Serilog__Elastic__Url=${Serilog__Elastic__Url}
+      - Serilog__Elastic__User=${Serilog__Elastic__User}
+      - Serilog__Elastic__Password=${Serilog__Elastic__Password}
       - SignUrl__Secret=${SignUrl__Secret}
     volumes:
     - ./deafult_file_storage:/files:rw
