--- a/scripts/.env_template
+++ b/scripts/.env_template
@@ -5,4 +5,10 @@ Serilog__Remote__Server=logs-01.loggly.com
 Serilog__Remote__Port=443
 Serilog__Remote__Token=b2a89f6a-666d-4825-977c-79499bc958c5
 Serilog__Remote__InstanceName=dev
+Serilog__Elastic__Url=
+Serilog__Elastic__User=
+Serilog__Elastic__Password=
+# !!! When adding variables here don't forget to add them to docker-compose.yml as well !!!
+
+
 POSTGRES_DATABASE=template_app
