--- a/frontend/package.json
+++ b/frontend/package.json
@@ -76,6 +76,7 @@
     "@typescript-eslint/eslint-plugin": "5.45.1",
     "@typescript-eslint/parser": "5.45.1",
     "@vitejs/plugin-react": "3.0.0",
+    "@vitejs/plugin-react-swc": "3.0.1",
     "eslint": "8.26.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-config-react-app": "7.0.1",
