--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,24 +7,21 @@
     "@emotion/styled": "11.9.3",
     "@fortawesome/free-solid-svg-icons": "6.1.1",
     "@fortawesome/react-fontawesome": "0.1.18",
-    "@mui/material": "5.10.12",
-    "@mui/styles": "5.10.10",
-    "@mui/x-date-pickers": "5.0.7",
-    "@reduxjs/toolkit": "1.9.0",
-    "@sentry/react": "6.19.7",
-    "@sentry/tracing": "6.19.7",
+    "@mui/material": "5.11.1",
+    "@mui/styles": "5.11.1",
+    "@mui/x-date-pickers": "5.0.11",
+    "@reduxjs/toolkit": "1.9.1",
+    "@sentry/react": "7.28.1",
+    "@sentry/tracing": "7.28.1",
     "@tanstack/react-query": "4.14.1",
     "@tanstack/react-table": "8.5.22",
     "@types/react-paginate": "7.1.1",
     "@types/react-table": "7.7.10",
     "axios": "0.26.1",
-    "axios-auth-refresh": "3.2.2",
+    "axios-auth-refresh": "3.3.4",
     "browser-tabs-lock": "1.2.15",
     "clsx": "1.2.1",
-    "concurrently": "6.5.1",
-    "cross-env": "7.0.3",
     "date-fns": "2.29.3",
-    "dotenv": "16.0.0",
     "fast-deep-equal": "3.1.3",
     "i18next": "22.0.6",
     "i18next-browser-languagedetector": "6.1.5",
@@ -33,19 +30,18 @@
     "js-base64": "3.6.0",
     "js-logger": "1.6.1",
     "jwt-decode": "3.1.2",
-    "lottie-web": "5.9.6",
-    "material-ui-popup-state": "5.0.3",
-    "nock": "13.2.9",
-    "nswag": "13.17.0",
-    "oidc-client-ts": "2.0.1",
+    "lottie-web": "5.10.0",
+    "material-ui-popup-state": "5.0.4",
+    "nswag": "13.18.2",
+    "oidc-client-ts": "2.2.0",
     "query-string": "7.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-dropzone": "14.2.3",
     "react-hook-form": "7.39.4",
-    "react-i18next": "12.0.0",
+    "react-i18next": "12.1.1",
     "react-merge-refs": "2.0.1",
-    "react-paginate": "8.1.3",
+    "react-paginate": "8.1.4",
     "react-query-swagger": "15.2.1",
     "react-redux": "8.0.2",
     "react-router": "6.3.0",
@@ -57,26 +53,28 @@
     "react-window": "1.8.7",
     "redux": "4.2.0",
     "redux-persist": "6.0.0",
-    "sass": "1.56.0",
     "throttle-debounce": "3.0.1",
     "web-vitals": "1.1.2"
   },
   "devDependencies": {
     "@import-meta-env/cli": "0.4.1",
     "@import-meta-env/unplugin": "0.4.1",
-    "@testing-library/jest-dom": "5.11.4",
-    "@testing-library/react": "11.1.0",
-    "@testing-library/user-event": "12.1.10",
+    "@testing-library/jest-dom": "5.16.5",
+    "@testing-library/react": "13.4.0",
+    "@testing-library/user-event": "14.4.3",
     "@types/jest": "26.0.15",
     "@types/node": "17.0.24",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
     "@types/react-redux": "7.1.24",
     "@types/react-window": "1.8.5",
-    "@typescript-eslint/eslint-plugin": "5.45.1",
-    "@typescript-eslint/parser": "5.45.1",
+    "@typescript-eslint/eslint-plugin": "5.47.0",
+    "@typescript-eslint/parser": "5.47.0",
     "@vitejs/plugin-react": "3.0.0",
     "@vitejs/plugin-react-swc": "3.0.1",
+    "concurrently": "6.5.1",
+    "cross-env": "7.0.3",
+    "dotenv": "16.0.0",
     "eslint": "8.26.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-config-react-app": "7.0.1",
@@ -87,11 +85,13 @@
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-react": "7.31.10",
     "eslint-plugin-react-hooks": "4.6.0",
-    "prettier": "2.7.1",
-    "react-devtools": "4.13.5",
+    "nock": "13.2.9",
+    "prettier": "2.8.1",
+    "react-devtools": "4.27.1",
     "redux-devtools-extension": "2.13.9",
     "replace": "1.2.2",
-    "rollup-plugin-visualizer": "5.6.0",
+    "rollup-plugin-visualizer": "5.8.3",
+    "sass": "1.57.1",
     "typescript": "4.9.3",
     "vite": "4.0.3",
     "vite-plugin-mkcert": "1.10.1",
@@ -106,14 +106,12 @@
     "prestart": "yarn build-scss-for-razor",
     "typecheck": "tsc && eslint \\*\\*/\\*.ts \\*\\*/\\*.tsx --quiet",
     "test": "vitest",
-    "build": "vite build && yarn build-scss-for-razor",
+    "build": "cross-env NODE_OPTIONS=\"--max-old-space-size=7000\" vite build && yarn build-scss-for-razor",
     "build-scss-for-razor": "sass --load-path=./ src/razor.scss ../webapi/src/MccSoft.TemplateApp.App/wwwroot/css/frontend.css",
     "generate-api-clients": "concurrently \"yarn generate-api-client-axios\" \"yarn generate-api-client-dotnet\"",
     "generate-api-client-axios": "react-query-swagger openapi2tsclient /tanstack /input:https://localhost:5001/swagger/v1/swagger.json /output:src/services/api/api-client.ts /template:Axios /serviceHost:. /use-recommended-configuration",
     "generate-api-client-remote": "react-query-swagger openapi2tsclient /tanstack /input:https://template.mcc-soft.de/swagger/v1/swagger.json /output:src/services/api/api-client.ts /template:Axios /serviceHost:. /use-recommended-configuration",
     "generate-api-client-dotnet": "nswag openapi2csclient /input:https://localhost:5003/swagger/csharp/swagger.json /output:../webapi/src/MccSoft.TemplateApp.Http/GeneratedClient.cs /templateDirectory:../webapi/src/MccSoft.TemplateApp.Http/template /namespace:MccSoft.TemplateApp.Http.Generated /generateClientInterfaces:true /clientBaseClass:BaseClient /exposeJsonSerializerSettings:true /generateUpdateJsonSerializerSettingsMethod:false /clientBaseInterface:IBaseClient /jsonLibrary:SystemTextJson && yarn replace \", NullValueHandling = Newtonsoft.Json.NullValueHandling.Ignore\" \" \" ../webapi/src/MccSoft.TemplateApp.Http/GeneratedClient.cs",
-    "analyze-statoscope": "STATS=1 react-app-rewired build",
-    "analyze-sourcemap-size": "source-map-explorer build/static/js/*.js",
     "npm-start": "yarn start"
   },
   "eslintConfig": {
