--- a/frontend/package.json
+++ b/frontend/package.json
@@ -84,6 +84,7 @@
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-react": "7.31.10",
     "eslint-plugin-react-hooks": "4.6.0",
+    "importmap-plugin": "0.8.0",
     "nock": "13.2.9",
     "prettier": "2.8.1",
     "react-devtools": "4.27.1",
