--- a/webapi/src/MccSoft.TemplateApp.App/MccSoft.TemplateApp.App.csproj
+++ b/webapi/src/MccSoft.TemplateApp.App/MccSoft.TemplateApp.App.csproj
@@ -42,7 +42,8 @@
   <ItemGroup>
     <PackageReference Include="Metalama.Framework" Version="0.5.71-preview" />
     <PackageReference Include="Microsoft.AspNetCore.SpaProxy" Version="7.0.0" />
-    <PackageReference Include="Audit.NET.PostgreSql" Version="20.1.1" />
+    <PackageReference Include="Audit.NET.Serilog" Version="20.1.3" />
+    <PackageReference Include="Audit.NET.PostgreSql" Version="20.1.3" />
     <PackageReference Include="Hangfire.AspNetCore" Version="1.7.32" />
     <PackageReference Include="Hangfire.Core" Version="1.7.32" />
     <PackageReference Include="Hangfire.Dashboard.BasicAuthorization" Version="1.0.2" />
