Add tools restore and added husky folder for pre-commit hooks.

--- a/webapi/src/MccSoft.TemplateApp.App/MccSoft.TemplateApp.App.csproj
+++ b/webapi/src/MccSoft.TemplateApp.App/MccSoft.TemplateApp.App.csproj
@@ -126,4 +126,12 @@
     <EmbeddedResource Remove="logs\**" />
   </ItemGroup>
 
+  <!-- Adding the husky code to a multiple targeted project will cause husky to run multiple times. 
+    e.g <TargetFrameworks>netcoreapp3.1;net5.0;net6.0;net7.0</TargetFrameworks> 
+  to avoid this, you can add the $(IsCrossTargetingBuild)' == 'true' condition to the target. e.g-->
+  <Target Name="Husky" BeforeTargets="Restore;CollectPackageReferences" Condition="'$(HUSKY)' != 0">
+    <Exec Command="dotnet tool restore" StandardOutputImportance="Low" StandardErrorImportance="High" />
+    <!--<Exec Command="dotnet husky install" StandardOutputImportance="Low" StandardErrorImportance="High" WorkingDirectory="../../" />-->
+  </Target>
+
 </Project>
