--- a/frontend/package.json
+++ b/frontend/package.json
@@ -52,6 +52,7 @@
     "react-window": "1.8.7",
     "redux": "4.2.0",
     "redux-persist": "6.0.0",
+    "superjson": "1.12.1",
     "throttle-debounce": "3.0.1",
     "web-vitals": "1.1.2"
   },
