--- a/frontend/package.json
+++ b/frontend/package.json
@@ -57,8 +57,18 @@
     "web-vitals": "1.1.2"
   },
   "devDependencies": {
+    "@babel/core": "7.20.12",
     "@import-meta-env/cli": "0.4.1",
     "@import-meta-env/unplugin": "0.4.1",
+    "@mdx-js/react": "1.6.22",
+    "@storybook/addon-actions": "6.5.15",
+    "@storybook/addon-docs": "6.5.15",
+    "@storybook/addon-essentials": "6.5.15",
+    "@storybook/addon-interactions": "6.5.15",
+    "@storybook/addon-links": "6.5.15",
+    "@storybook/builder-vite": "0.2.7",
+    "@storybook/react": "6.5.15",
+    "@storybook/testing-library": "0.0.13",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "14.4.3",
@@ -72,6 +82,7 @@
     "@typescript-eslint/parser": "5.47.0",
     "@vitejs/plugin-react": "3.0.0",
     "@vitejs/plugin-react-swc": "3.0.1",
+    "babel-loader": "8.3.0",
     "concurrently": "6.5.1",
     "cross-env": "7.0.3",
     "dotenv": "16.0.3",
@@ -85,6 +96,7 @@
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-react": "7.31.10",
     "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-storybook": "0.6.10",
     "importmap-plugin": "0.8.0",
     "nock": "13.2.9",
     "prettier": "2.8.1",
@@ -93,6 +105,7 @@
     "replace": "1.2.2",
     "rollup-plugin-visualizer": "5.8.3",
     "sass": "1.57.1",
+    "tsconfig-paths-webpack-plugin": "4.0.0",
     "typescript": "4.9.3",
     "vite": "4.0.3",
     "vite-plugin-mkcert": "1.10.1",
@@ -113,7 +126,9 @@
     "generate-api-client-axios": "react-query-swagger openapi2tsclient /tanstack /input:https://localhost:5001/swagger/v1/swagger.json /output:src/services/api/api-client.ts /template:Axios /serviceHost:. /use-recommended-configuration",
     "generate-api-client-remote": "react-query-swagger openapi2tsclient /tanstack /input:https://template.mcc-soft.de/swagger/v1/swagger.json /output:src/services/api/api-client.ts /template:Axios /serviceHost:. /use-recommended-configuration",
     "generate-api-client-dotnet": "nswag openapi2csclient /input:https://localhost:5003/swagger/csharp/swagger.json /output:../webapi/src/MccSoft.TemplateApp.Http/GeneratedClient.cs /templateDirectory:../webapi/src/MccSoft.TemplateApp.Http/template /namespace:MccSoft.TemplateApp.Http.Generated /generateClientInterfaces:true /clientBaseClass:BaseClient /exposeJsonSerializerSettings:true /generateUpdateJsonSerializerSettingsMethod:false /clientBaseInterface:IBaseClient /jsonLibrary:SystemTextJson && yarn replace \", NullValueHandling = Newtonsoft.Json.NullValueHandling.Ignore\" \" \" ../webapi/src/MccSoft.TemplateApp.Http/GeneratedClient.cs",
-    "npm-start": "yarn start"
+    "npm-start": "yarn start",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "eslintConfig": {
     "extends": [
