--- a/.gitignore
+++ b/.gitignore
@@ -366,3 +366,4 @@ fabric.properties
 **/.idea/riderMarkupCache.xml
 webapi/src/MccSoft.TemplateApp.App/wwwroot/css/frontend.css
 webapi/src/MccSoft.TemplateApp.App/wwwroot/css/frontend.css.map
+frontend/storybook-static
