--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "rename": "node scripts/rename-script.js",
     "pull-template-changes": "node scripts/pull-template-changes.js && yarn install && yarn typecheck",
     "frontend": "yarn workspace @templateApp/frontend",
-    "build-dotnet-version": "cross-env-shell dotnet publish webapi/src/MccSoft.TemplateApp.App/MccSoft.TemplateApp.App.csproj -c Release -o publish $VERSION",
-    "build-dotnet": "rimraf publish && cross-env VERSION=\\\"/p:Version\\\"=\\\"$npm_package_version\\\" yarn build-dotnet-version",
+    "build-dotnet": "rimraf publish && cross-env-shell dotnet publish webapi/src/MccSoft.TemplateApp.App/MccSoft.TemplateApp.App.csproj -c Release -o publish -p:Version=$npm_package_version",
     "build-frontend": "yarn frontend build",
     "copy-frontend": "yarn copyfiles -u 2 \"frontend/build/**/*\" \"publish/wwwroot\" && yarn copyfiles -u 1 frontend/.env publish/wwwroot",
     "copy-storybook": "yarn copyfiles -u 2 \"frontend/storybook-static/**/*\" \"publish/wwwroot/storybook\"",
