--- a/e2e/package.json
+++ b/e2e/package.json
@@ -4,12 +4,18 @@
   "devDependencies": {
     "@playwright/test": "1.30.0",
     "@types/randomstring": "1.1.8",
+    "@typescript-eslint/eslint-plugin": "5.50.0",
+    "@typescript-eslint/parser": "5.50.0",
     "dotenv": "16.0.3",
+    "eslint": "8.33.0",
+    "eslint-config-prettier": "8.6.0",
+    "eslint-plugin-prettier": "4.2.1",
     "randomstring": "1.2.3",
     "typescript": "4.9.5"
   },
   "scripts": {
-    "typecheck": "yarn tsc",
+    "typecheck": "yarn tsc && yarn eslint",
+    "eslint": "eslint --config \\.eslintrc.js --no-eslintrc \\*\\*/\\*.ts --quiet ",
     "update-storybook-snapshots-linux": "cd .. && docker run --env STORYBOOK_URL=http://host.docker.internal:6006 --rm --network host -v $(pwd):/work/ -w /work/e2e -it mcr.microsoft.com/playwright:v1.30.0-focal npx playwright test storybook -j 1 --update-snapshots"
   }
 }
