--- a/e2e/package.json
+++ b/e2e/package.json
@@ -16,6 +16,7 @@
   "scripts": {
     "typecheck": "yarn tsc && yarn eslint",
     "eslint": "eslint --config \\.eslintrc.js --no-eslintrc \\*\\*/\\*.ts --quiet ",
+    "test": "npx playwright test storybook",
     "update-storybook-snapshots-linux": "cd .. && docker run --env STORYBOOK_URL=http://host.docker.internal:6006 --rm --network host -v $(pwd):/work/ -w /work/e2e -it mcr.microsoft.com/playwright:v1.30.0-focal npx playwright test storybook -j 1 --update-snapshots"
   }
 }
