--- a/.ci/azure-pipelines.yml
+++ b/.ci/azure-pipelines.yml
@@ -25,27 +25,27 @@ stages:
             fetchDepth: 1
             submodules: true
 
-          - template: ./azure-pipelines-tests-shared.yml
+          # - template: ./azure-pipelines-tests-shared.yml
 
-          - script: |
-              yarn json -f package.json -I -e 'this.version="$(BUILD_NUMBER)"'
-              yarn json -f frontend/package.json -I -e 'this.version="$(BUILD_NUMBER)"'
-              yarn --version
+          # - script: |
+          #     yarn json -f package.json -I -e 'this.version="$(BUILD_NUMBER)"'
+          #     yarn json -f frontend/package.json -I -e 'this.version="$(BUILD_NUMBER)"'
+          #     yarn --version
 
-              # `set version` step should go after `yarn install`, since it uses `json` package which should be installed
-              # we do not use `yarn version` plugin, because it doesn't play well with shallow clone (https://yarnpkg.com/features/release-workflow#commit-history)
-            displayName: 'set version'
+          #     # `set version` step should go after `yarn install`, since it uses `json` package which should be installed
+          #     # we do not use `yarn version` plugin, because it doesn't play well with shallow clone (https://yarnpkg.com/features/release-workflow#commit-history)
+          #   displayName: 'set version'
 
-          - script: |
-              yarn copy-translations-to-backend
-            displayName: 'copy translations to backend'
+          # - script: |
+          #     yarn copy-translations-to-backend
+          #   displayName: 'copy translations to backend'
 
-          - script: |
-              yarn build-frontend
-            displayName: 'build frontend'
+          # - script: |
+          #     yarn build-frontend
+          #   displayName: 'build frontend'
 
-          - publish: './frontend/build'
-            artifact: 'frontend'
+          # - publish: './frontend/build'
+          #   artifact: 'frontend'
 
           - script: |
               yarn frontend build-storybook
