--- a/e2e/package.json
+++ b/e2e/package.json
@@ -10,6 +10,7 @@
     "eslint": "8.33.0",
     "eslint-config-prettier": "8.6.0",
     "eslint-plugin-prettier": "4.2.1",
+    "http-server": "14.1.1",
     "randomstring": "1.2.3",
     "typescript": "4.9.5"
   },
