--- a/.ci/azure-pipelines.yml
+++ b/.ci/azure-pipelines.yml
@@ -48,6 +48,7 @@ stages:
       - job: UI_Tests
         pool:
           vmImage: 'ubuntu-latest'
+        container: mcr.microsoft.com/playwright:v1.30.0-focal
         steps:
           - template: ./tests/azure-pipelines-storybook-tests.yml
 
