update storybook to v7

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -62,14 +62,13 @@
     "@import-meta-env/cli": "0.4.1",
     "@import-meta-env/unplugin": "0.4.1",
     "@mdx-js/react": "1.6.22",
-    "@storybook/addon-actions": "6.5.16",
-    "@storybook/addon-docs": "6.5.16",
-    "@storybook/addon-essentials": "6.5.16",
-    "@storybook/addon-interactions": "6.5.16",
-    "@storybook/addon-links": "6.5.16",
-    "@storybook/builder-vite": "0.4.0",
-    "@storybook/react": "6.5.16",
-    "@storybook/testing-library": "0.0.13",
+    "@storybook/addon-essentials": "7.0.0-beta.25",
+    "@storybook/addon-interactions": "7.0.0-beta.25",
+    "@storybook/addon-links": "7.0.0-beta.25",
+    "@storybook/blocks": "7.0.0-beta.25",
+    "@storybook/react": "7.0.0-beta.25",
+    "@storybook/react-vite": "7.0.0-beta.25",
+    "@storybook/testing-library": "0.0.14-next.1",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "14.4.3",
@@ -101,11 +100,13 @@
     "importmap-plugin": "0.8.0",
     "nock": "13.2.9",
     "prettier": "2.8.1",
+    "prop-types": "15.8.1",
     "react-devtools": "4.27.1",
     "redux-devtools-extension": "2.13.9",
     "replace": "1.2.2",
     "rollup-plugin-visualizer": "5.8.3",
     "sass": "1.57.1",
+    "storybook": "7.0.0-beta.25",
     "tsconfig-paths-webpack-plugin": "4.0.0",
     "typescript": "4.9.3",
     "vite": "4.0.4",
@@ -128,8 +129,8 @@
     "generate-api-client-remote": "react-query-swagger openapi2tsclient /tanstack /input:https://template.mcc-soft.de/swagger/v1/swagger.json /output:src/services/api/api-client.ts /template:Axios /serviceHost:. /use-recommended-configuration",
     "generate-api-client-dotnet": "nswag openapi2csclient /input:https://localhost:5001/swagger/csharp/swagger.json /output:../webapi/src/MccSoft.TemplateApp.Http/GeneratedClient.cs /templateDirectory:../webapi/src/MccSoft.TemplateApp.Http/template /namespace:MccSoft.TemplateApp.Http.Generated /generateClientInterfaces:true /clientBaseClass:BaseClient /exposeJsonSerializerSettings:true /generateUpdateJsonSerializerSettingsMethod:false /clientBaseInterface:IBaseClient /jsonLibrary:SystemTextJson && yarn replace \", NullValueHandling = Newtonsoft.Json.NullValueHandling.Ignore\" \" \" ../webapi/src/MccSoft.TemplateApp.Http/GeneratedClient.cs",
     "npm-start": "yarn start",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "eslintConfig": {
     "extends": [
